some more changes

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@
     --color-secondary: #00bcd4;
     --color-gradient-1: #8a2be2;
     --color-gradient-2: #00bcd4;
-    --color-bg-dark: #121212;
+    --color-bg-dark: #19192f;
     --color-text-light: #f0f0f0;
     --color-card-bg: #1e1e1e;
     --color-border: #333;
